Form bugfixes - Fixed last tile not getting filling position field in the edit form - Transitioned from unshift to push - Added a check if the tile page changed to set_tile

--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ input[type="color"] {
 }
 
 /* Device Support */
-@media only screen and (max-width: 650px) and (min-height: 400px) {
+@media only screen and (max-width: 550px) and (min-height: 400px) {
     /* For narrow touch screen devices */
     .flex-container {
         margin-top: -10px;
